# gem-audit

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE.md  README.md
.github/workflows/: ci.yml  docker.yml  release.yml
benchmarks/: bench.sh
src/: configuration.rs  lib.rs  main.rs  scanner.rs  util.rs
src/advisory/: database.rs  mod.rs  model.rs
src/format/: json.rs  mod.rs  text.rs
src/lockfile/: mod.rs  parser.rs  ruby_version.rs
src/version/: gem_version.rs  requirement.rs
tests/: cli.rs
tests/fixtures/mock_db/rubies/ruby/: CVE-2021-31810.yml
