[package]
name = "bundler-audit"
version = "1.1.0"
edition = "2024"
description = "Patch-level verification for Ruby Bundler dependencies"
license = "GPL-3.0-or-later"

[dependencies]
clap = { version = "4", features = ["derive"] }
gix = { version = "0.72", default-features = false, features = ["blocking-network-client", "worktree-mutation"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
