[package]
name = "gem-audit"
version = "2.1.1"
edition = "2024"
description = "Fast, standalone security auditor for Gemfile.lock"
license = "MIT"
repository = "https://github.com/7a6163/gem-audit"
homepage = "https://github.com/7a6163/gem-audit"
keywords = ["security", "audit", "ruby", "bundler", "vulnerability"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
gix = { version = "0.72", default-features = false, features = ["blocking-network-client", "blocking-http-transport-curl", "worktree-mutation"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
